<resources>
    <string name="app_name">宁南中医医院</string>
    <string name="action_settings">Settings</string>
    <string name="setting_main_screenshot">科室医生</string>
    <string name="setting_main_capture">预约挂号</string>
    <string name="setting_main_capture1">查询系统</string>
    <string name="setting_main_files">健康宣传</string>
    <string name="setting_main_root">名医馆</string>
    <string name="setting_main_root1">医院导航</string>
    <string name="community_subactivity_kacha_douwo">主页</string>
    <string name="community_subactivity_kacha_follow">个人中心</string>
    <string name="community_main_publish">更多</string>
    <string name="homepage_title">宁南县中医医院</string>
    <string name="setting_main_open">点击打开</string>
    <string name="more_main_complaint">投诉</string>
    <string name="more_main_current_version">当前版本</string>
    <string name="more_main_feedbanck">意见反馈</string>
    <string name="more_main_about_us">关于我们</string>
    <string name="more_main_title">更多</string>
    <string name="uc_land_in">登录</string>
    <string name="uc_land_out">退出</string>
    <string name="uc_land_account_number">账号</string>
    <string name="uc_land_password">密码</string>
    <string name="uc_land_new_user">新用户</string>
    <string name="uc_land_retrieve_password">找回密码</string>
    <string name="uc_land_rembember_password">记住密码</string>
    <string name="uc_land_auto_landing">自动登录</string>
    <string name="uc_land_user_prompt">请填写注册手机号</string>
    <string name="uc_land_password_prompt">请输入密码</string>
    <string name="uc_land_password_forget">忘记密码</string>
    <string name="title_activity_uclanding">UClandingActivity</string>
    <string name="tv_uc_center_title">个人中心</string>
    <string name="tv_uc_center_yue">我的预约</string>
    <string name="tv_uc_center_friend">常用就诊人</string>
    <string name="img_uc_center_flush">清除缓存</string>
    <string name="tv_uc_center_change">修改密码</string>
    <string name="tv_uc_center_logout">退出登录</string>
    <string name="tv_uc_center_info">个人信息</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_query_system">QuerySystemActivity</string>
    <string name="tv_query_system_title">查询系统</string>
    <string name="tv_query_system_zyh">住院号:</string>
    <string name="tv_query_system_fy">费用查询</string>
    <string name="tv_query_system_zd">诊断查询</string>
    <string name="tv_query_system_bg">报告查询</string>
    <string name="tv_query_system_cf">处方查询</string>
    <string name="tv_query_system_jg">价格查询</string>
    <string name="title_activity_zyfy">ZYFYActivity</string>
    <string name="tv_zyfy_title">住院费用</string>
    <string name="zyfy_tv_yj">预交金额:</string>
    <string name="zyfy_tv_ye">账户余额:</string>
    <string name="zyfy_tv_yy">已用费用:</string>
    <string name="zyfy_tv_jz">记账限额:</string>
    <string name="zyfy_tv_br">病人姓名:</string>
    <string name="zyfy_tv_sf">身份证号:</string>
    <string name="zyfy_tv_brzt">住院状态:</string>
    <string name="cyzyfy_tv_zfy">总费用:</string>
    <string name="cyzyfy_tv_zhylfwmc">综合医疗服务类:</string>
    <string name="cyzyfy_tv_zdlmc">诊断类:</string>
    <string name="cyzyfy_tv_zllmc">治疗类:</string>
    <string name="cyzyfy_tv_kflmc">康复类:</string>
    <string name="cyzyfy_tv_zylmc">中医类:</string>
    <string name="cyzyfy_tv_xylmc">西药类:</string>
    <string name="cyzyfy_tv_zylfmc">中药类:</string>
    <string name="cyzyfy_tv_xyhlfmc">血液和血液制品类:</string>
    <string name="cyzyfy_tv_hclfmc">耗材类:</string>
    <string name="cyzyfy_tv_qtlfmc">其他类:</string>
    <string name="tv_mzfycx_title">门诊费用查询</string>
    <string name="mzfy_tv_jzrq">就诊日期:</string>
    <string name="mzfy_tv_jtzj">家庭住址:</string>
    <string name="mzfy_tv_ghys">挂号医生:</string>
    <string name="mzfy_tv_zfy">总费用:</string>
    <string name="mzfy_tv_ghf">挂号费:</string>
    <string name="mzfy_tv_zcf">诊查费:</string>
    <string name="mzfy_tv_qtf">其他费:</string>
    <string name="mzfy_tv_ghxh">挂号序号:</string>
    <string name="mzbl_tv_gh">挂号科室:</string>
    <string name="tv_mzbl_title">门诊综合查询</string>
    <string name="tv_mzbl_nl">年龄:</string>
    <string name="tv_mzbl_jiben">基本信息</string>
    <string name="tv_mzcf_zycf">中药处方</string>
    <string name="mzzycf_tv_zd">临床诊断:</string>
    <string name="mzzycf_tv_yf">用法:</string>
    <string name="mzzycf_tv_fs">副数:</string>
    <string name="mzfy_tv_ggxx">小提示：尊敬的患者您好！其他费用包括“西药费”、“成药费”、“成药费”、“草药费”、“检查费”、“化验费”、“治疗费”、“手术费”、“材料费”、“救护车费”、“护理费”、“麻醉费”、“放射费”、“放射费”.宁南县中医医院祝您早日康复!</string>
    <string name="zyfy_tv_gg">"     "尊敬的住院病人您好！输入您的住院号，点击查询就可以查询您的费用信息了。 宁南县中医医院祝您早日康复!</string>
    <string name="tv_mzxy_title">西药处方</string>
    <string name="tv_xycf_fb">费别:</string>
    <string name="tv_mzzlcz_title">治疗处置</string>
    <string name="tv_mzzlcz_sqxm">申请项目</string>
    <string name="tv_mzzlcz_sqsl">数量</string>
    <string name="tv_mzzlcz_je">金额</string>
    <string name="tv_mzzlcz_dj">单价</string>
    <string name="common_loading_msg">正在加载...</string>
    <string name="uc_info_usname">真实姓名:</string>
    <string name="uc_info_hint_xm">请输入您的真实姓名</string>
    <string name="uc_info_hint_sh">请输入您的身份证号</string>
    <string name="uc_info_hint_jtzz">请输入您的家庭住址</string>
    <string name="uc_info_hint_tj">提交</string>
    <string name="uc_info_xiugai">修改</string>
    <string name="uc_insert_jiuzhenren">添加就诊人</string>
    <string name="uc_infome_phone">电话号码：</string>
    <string name="uc_friend_manage">就诊人管理</string>
    <string name="tv_Yyks_title">挂号科室</string>
    <string name="tv_Yyyd_title">挂号医生</string>
    <string name="tv_yygh_ks_location">科室位置</string>
    <string name="tv_yygh_yy_jzrq">预约就诊日期</string>
    <string name="tv_yygh_yy_ghf">挂号费</string>
    <string name="tv_yygh_yy_sbxx">上班信息</string>
    <string name="tv_yygh_yy_brxb">性别</string>
    <string name="tv_myyyinfo_title">我的预约信息</string>
    <string name="tv_myyyinfo_hzxm">患者姓名</string>
    <string name="tv_myyyinfo_qxyy">取消预约</string>
    <string name="tv_myyyinfo_mx_ph">患者电话</string>
    <string name="tv_myyyinfo_click">点击查看详情</string>
    <string name="tv_myyyinfo_day_work">当日医生上下班时间</string>
    <string name="net_contact_false">亲，当前无网络连接请检查！</string>
    <string name="tv_yygh_yy_ghfy">%1$s元</string>
    <string name="uc_info_hint">    &#160;&#160;&#160;&#160;&#160;&#160;尊敬的app用户您好，为了给您更好的服务希望您能把信息填完整而且必须填写真实信息，这样我们才能将您的健康信息正确的反馈给您！否则系统无法查询您的信息！</string>
    <string name="tv_uc_myfriend_mx">常用就诊人详情</string>
    <string name="tv_uc_myfriend_hzxm">姓名</string>
    <string name="tv_uc_myfriend_old">年龄</string>
    <string name="tv_uc_myfriend_phone">电话号码</string>
    <string name="tv_uc_myfriend_delete">删除就诊人</string>
    <string name="tv_mz_null_point">  &#160;&#160;&#160;&#160;&#160;亲，数据查询的这种方式没有找到您需要的数据，请直接与医院病案室联系查询。可能是您诊断时基本信息没有输入完全，也可能是您根本就没有开此处方。</string>
    <string name="register_uc_myfriend_hzxm">姓名:</string>
    <string name="register_uc_myfriend_ylkh">医疗卡号:</string>
    <string name="register_uc_myfriend_ylkh_hint">请输入您的医疗卡号</string>
    <string name="register_uc_myfriend_title">用户注册</string>
    <string name="register_uc_myfriend_pass">密码：</string>
    <string name="ks_and_ys_yyjs">医院介绍</string>
    <string name="ks_and_ys_yyks">科室介绍</string>
    <string name="ks_and_ys_yyys">医生介绍</string>
    <string name="tv_myddc_hint">&#160;&#160;&#160;&#160;&#160;您是否还有其他的建议。</string>
    <string name="title_activity_yy_js">YyJs</string>
    <string name="developming_wait">开发中敬请期待！</string>
    <string name="yy_js">&#160;&#160;&#160;&#160;&#160;宁南县中医医院创办于1985年，经过多年发展，现已成为一所集医疗、教学、康复、预防为一体的综合性二级甲等中医医院。是我县城镇职工基本医疗、居民医保、财产保险、人寿保险、农村合作医疗、计划生育免费手术等定点医疗单位。属政府举办的非营利性单位。
宁南县新中医医院总投入8000余万元，业务用房23000㎡，开放床位300张。医院现有职工201人，其中，专业技术人员160人（高级职称8人，中级职称38人）；新中医医院科室布局合理、设施设备齐全，已开设了肛肠科、针灸科、内一科、内二科、外科、妇产科、治未病、急诊科、口腔科、中医名医馆等科室，科室内病房环境优美，根据各科室特色，推出家庭式格局病房，内设空调、家居必备用品等设施，让患者在治疗的同时能有温馨舒适的感觉。目前，宁南县中医医院已经建设“省级重点专科”肛肠科，“州级重点专科”针灸科,“州级在建重点专科”妇产科，诊疗水平已达到了省内同级医疗机构的领先水平。我院是成都市第一人民医院对口支援合作单位，常年有省级各科专家在我院坐诊指导。
</string>
    <string name="myd_dc">满意度调查</string>
    <string name="bagl_basy_zyh">住院号：</string>
    <string name="bagl_basy_bah">病案号：</string>
    <string name="bagl_basy_jkkh">健康卡号：</string>
    <string name="bagl_basy_zycs">住院次数：</string>
    <string name="bagl_basy_brxm">姓名：</string>
    <string name="bagl_basy_brxb">性别：</string>
    <string name="bagl_basy_brnl">年龄：</string>
    <string name="bagl_basy_xsecstz">新生儿出生体重：</string>
    <string name="bagl_basy_brgj">国籍：</string>
    <string name="bagl_basy_brmz">民族：</string>
    <string name="bagl_basy_ylfffs">医疗付费方式：</string>
    <string name="bagl_basy_brsfzh">身份证号：</string>
    <string name="bagl_basy_brzy">职业：</string>
    <string name="bagl_basy_brhy">婚姻：</string>
    <string name="bagl_basy_jtzz">家庭住址：</string>
    <string name="bagl_basy_brdh">电话：</string>
    <string name="bagl_basy_lxrxm">联系人姓名：</string>
    <string name="bagl_basy_lxrzz">联系人住址：</string>
    <string name="bagl_basy_lxrdh">联系人电话：</string>
    <string name="bagl_basy_gdrq">归档日期：</string>
    <string name="custorm_dialog_title">提示</string>
    <string name="custorm_dialog_have_card">亲，是否有医疗卡，医疗卡是目前医院患者信息标志，若不用医疗卡可能查询到的数据不够完善！</string>
    <string name="custorm_dialog_ok">是</string>
    <string name="custorm_dialog_cancle">否</string>
    <string name="naviation_location">医院地址：</string>
    <string name="naviation_ph">电话：</string>
    <string name="naviation_location1">宁南县金沙大道西段</string>
    <string name="naviation_phone">0834-4570120</string>
    <string name="naviation_map">地图导航</string>
    <string name="naviation_hospital">院内导航</string>
    <string name="naviation_surround">周边</string>
    <string name="naviation_mylocation">我的位置</string>
    <string name="naviation">到这里</string>
    <string name="report_check">检验结果</string>
    <string name="report_inspect">检查结果</string>
    <string name="report_test">体检结果</string>
    <string name="lis_report">检验报告单</string>
    <string name="lis_mc">检验项目</string>
    <string name="lis_yq">仪器号：</string>
    <string name="lis_zyh">住院号：</string>
    <string name="lis_mzh">门诊号：</string>
    <string name="lis_tjh">体检号：</string>
    <string name="lis_cwh">床位号：</string>
    <string name="lis_ks">科室：</string>
    <string name="lis_lx">类型：</string>
    <string name="lis_sjys">送检医师：</string>
    <string name="lis_yblx">样本类型：</string>
    <string name="lis_tmh">条码号：</string>
    <string name="lis_lczd">临床诊断：</string>
    <string name="lis_sqsj">申请时间：</string>
    <string name="lis_cysj">采样时间：</string>
    <string name="lis_jssj">接收时间：</string>
    <string name="lis_shsj">审核时间：</string>
    <string name="lis_xmmc">项目名称</string>
    <string name="lis_jc">简称</string>
    <string name="lis_zt">状态</string>
    <string name="lis_jg">结果</string>
    <string name="lis_dw">单位</string>
    <string name="lis_ckfw">参考范围</string>
    <string name="lis_zxry">检验者：</string>
    <string name="lis_shry">审核者：</string>
    <string name="lis_jysb">检验设备：</string>
    <string name="pacx_jcxm">检查项目</string>
    <string name="pacx_yqmc">仪器名称:</string>
    <string name="pacx_sqys">申请医生：</string>
    <string name="pacx_sqsj">申请时间：</string>
    <string name="pacx_jch">检查号：</string>
    <string name="pacx_jcbw">检查部位：</string>
    <string name="pacx_bgys">报告医生：</string>
    <string name="pacx_shys">审核医生：</string>
    <string name="pacx_mzh">门诊号：</string>
    <string name="pacx_yxms">影像描述：</string>
    <string name="pacx_yxts">提示：</string>
    <string name="pacx_bgsj">报告时间：</string>
    <string name="pacx_xts">注意：  此报告只反映受检者当次所见，只供临床参考，不作证明材料。</string>
    <string name="tjgl_dah">档案号：</string>
    <string name="tjgl_tjbh">体检编号：</string>
    <string name="tjgl_lxdh">联系电话：</string>
    <string name="tjgl_bgrq">报告日期：</string>
    <string name="tjgl_ssdw">所属单位：</string>
    <string name="tjgl_jcxmmc">检查项目名称</string>
    <string name="tjgl_ts">提示</string>
    <string name="tjgl_tjrxm">体检人姓名</string>
</resources>