<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qiwei.hospital.ui.LisActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/lis_ll_xmmc"
            android:layout_margin="6dp"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tjgl_tjrxm"
                android:textSize="18sp"
                android:paddingBottom="15dp"
                />
            <ListView
                android:id="@+id/lis_xmmc"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ListView>
        </LinearLayout>
        <ScrollView
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="false"
            android:layout_alignTop="@+id/lis_ll_xmmc"
            android:layout_toEndOf="@+id/lis_ll_xmmc">
            <HorizontalScrollView
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:id="@+id/ll_lis_jg"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_examinition_title"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:layout_centerInParent="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_examnition_dah"
        android:text="@string/tjgl_dah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_toRightOf="@+id/tv_examnition_dah"
        android:layout_marginLeft="5dp"
        android:text="0000100004"
        android:id="@+id/tv_tjgl_dah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_toRightOf="@+id/tv_tjgl_dah"
        android:layout_marginLeft="25dp"
        android:id="@+id/tv_examnition_tjbh"
        android:text="@string/tjgl_tjbh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_toRightOf="@+id/tv_examnition_tjbh"
        android:layout_marginLeft="5dp"
        android:text="201600000016"
        android:id="@+id/tv_tjgl_tjbh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_toRightOf="@+id/tv_tjgl_tjbh"
        android:layout_marginLeft="25dp"
        android:id="@+id/tv_examnition_sfzh"
        android:text="@string/bagl_basy_brsfzh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_toRightOf="@+id/tv_examnition_sfzh"
        android:layout_marginLeft="5dp"
        android:text="513427197010241232"
        android:id="@+id/tv_tjgl_sfzh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>
<View android:background="@color/color_333333"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_examnition_xm"
            android:text="@string/bagl_basy_brxm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_toRightOf="@id/tv_examnition_xm"
            android:text="陈斌"
            android:id="@+id/tv_tjgl_brxm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/tv_tjgl_brxm"
            android:id="@+id/tv_examnition_xb"
            android:text="@string/bagl_basy_brxb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_toRightOf="@id/tv_examnition_xb"
            android:text="男"
            android:id="@+id/tv_tjgl_brxb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/tv_tjgl_brxb"
        android:id="@+id/tv_examnition_nl"
        android:text="@string/bagl_basy_brnl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <TextView
            android:layout_toRightOf="@id/tv_examnition_nl"
            android:text="48"
            android:id="@+id/tv_tjgl_brnl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/tv_tjgl_brnl"
            android:id="@+id/tv_examnition_lxdh"
            android:text="@string/tjgl_lxdh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_toRightOf="@id/tv_examnition_lxdh"
            android:text="13508203652"
            android:id="@+id/tv_tjgl_lxdh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/tv_tjgl_lxdh"
            android:id="@+id/tv_examnition_bgrq"
            android:text="@string/tjgl_bgrq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_toRightOf="@id/tv_examnition_bgrq"
            android:text="2016-11-14"
            android:id="@+id/tv_tjgl_bgrq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@+id/tv_examnition_xm"
            android:id="@+id/tv_examnition_ssdw"
            android:text="@string/tjgl_ssdw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@+id/tv_examnition_xm"
            android:layout_toRightOf="@id/tv_examnition_ssdw"
            android:text="主业全民"
            android:id="@+id/tv_tjgl_ssdw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/tv_tjgl_ssdw"
            android:layout_below="@+id/tv_examnition_lxdh"
            android:id="@+id/tv_examnition_jtzz"
            android:text="@string/bagl_basy_jtzz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@+id/tv_examnition_xm"
            android:layout_toRightOf="@id/tv_examnition_jtzz"
            android:text="宁南县"
            android:id="@+id/tv_tjgl_jtzz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
                        <View android:background="@color/color_333333"
                              android:layout_width="match_parent"
                              android:layout_height="1dp"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_tjgljyxmmc"
        android:text="@string/tjgl_jcxmmc"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_toRightOf="@id/tv_tjgljyxmmc"
        android:id="@+id/tv_tjgl_jg"
        android:text="@string/report_inspect"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_toRightOf="@id/tv_tjgl_jg"
        android:id="@+id/tv_tjgl_ckfw"
        android:text="@string/lis_ckfw"
        android:layout_width="100dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_toRightOf="@id/tv_tjgl_ckfw"
        android:id="@+id/tv_tjgl_ts"
        android:text="@string/tjgl_ts"
        android:layout_width="38dp"
        android:layout_height="wrap_content"/>
</RelativeLayout>
  <View android:background="@color/color_333333"
                              android:layout_width="match_parent"
                              android:layout_height="1dp"/>
                        <ListView
                            android:id="@+id/list_ls_jyjg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></ListView>
                    </LinearLayout>
                    <LinearLayout
                        android:paddingTop="50dp"
                        android:layout_below="@+id/ll_lis_jg"
                        android:layout_alignParentBottom="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/id_tv_lis_sh"
                                android:gravity="center"
                                android:text="@string/lis_shsj"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_toRightOf="@id/id_tv_lis_sh"
                                android:id="@+id/id_tv_lis_shsj"
                                android:gravity="center"
                                android:text="2016-10-23:08;2322323"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_marginLeft="15dp"
                                android:layout_toRightOf="@id/id_tv_lis_shsj"
                                android:id="@+id/id_tv_lis_shr"
                                android:gravity="center"
                                android:text="@string/lis_shry"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_marginLeft="15dp"
                                android:layout_toRightOf="@id/id_tv_lis_shr"
                                android:id="@+id/id_tv_lis_shry"
                                android:gravity="center"
                                android:text="张三"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_below="@+id/id_tv_lis_sh"
                                android:id="@+id/id_tv_lis_zx"
                                android:gravity="center"
                                android:text="@string/lis_jysb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_below="@+id/id_tv_lis_sh"
                                android:layout_toRightOf="@+id/id_tv_lis_zx"
                                android:id="@+id/id_tv_lis_zxsb"
                                android:gravity="center"
                                android:text="手工设备"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_below="@+id/id_tv_lis_sh"
                                android:layout_marginLeft="15dp"
                                android:layout_toRightOf="@+id/id_tv_lis_zxsb"
                                android:id="@+id/id_tv_lis_zxr"
                                android:gravity="center"
                                android:text="@string/lis_zxry"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_below="@+id/id_tv_lis_sh"
                                android:layout_marginLeft="15dp"
                                android:layout_toRightOf="@+id/id_tv_lis_zxr"
                                android:id="@+id/id_tv_lis_zxry"
                                android:gravity="center"
                                android:text="李四"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </RelativeLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="5dp"/>
                    </LinearLayout>

                </RelativeLayout>

            </HorizontalScrollView>
        </ScrollView>





    </RelativeLayout>



</LinearLayout>

